# ContractLens

./: .dockerignore  .gitignore  Makefile  README.md  compose.override.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/api/: __init__.py  main.py  requirements.txt
apps/api/app/: __init__.py  database.py  main.py  models.py  schemas.py
apps/api/app/routers/: __init__.py  contracts.py  health.py  jobs.py  reviews.py
apps/worker/: __init__.py  worker.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  master_spec.md  prd.md
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infra/migrations/: 001_create_audit_jobs.sql  002_create_contracts.sql  003_create_contract_pages.sql  004_create_contract_chunks.sql  005_create_extractions.sql  006_create_extraction_quotes.sql  007_create_legal_findings.sql  008_create_risk_scores.sql  009_create_action_items.sql  010_create_human_reviews.sql  011_create_provider_calls.sql  012_create_audit_events.sql  013_create_exports.sql
infra/seed/: 001_stamp_duty_rules.sql  002_risk_weights.sql  003_config_defaults.sql
tests/: conftest.py
tests/fixtures/: sample_contract_clean.txt  sample_contract_high_risk.txt
tests/unit/: test_numeric_parser.py  test_quote_validator.py  test_router.py  test_rules.py
