# ContractLens — Legal AI for M&A due diligence
# Python 3.12+, strict typing, async throughout.

[project]
name = "contractlens"
version = "0.1.0"
description = "Legal AI — extract poison-pill clauses from Indian commercial contracts for M&A due diligence"
requires-python = ">=3.12"
authors = [
    { name = "ContractLens Team" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Legal Technology",
]

dependencies = [
    # Workflow orchestration
    "langgraph>=0.2.0",

    # Schema & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # HTTP / API
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Database
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",

    # File processing
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",

    # Code quality
    "ruff>=0.5",
    "mypy>=1.10",

    # Testing HTTP (mirrors runtime dep)
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/contractlens/contractlens"
Source = "https://github.com/contractlens/contractlens"

# ── Build system ──────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

# ── Tool: ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line-length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Tool: mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_subclassing_any = false
ignore_missing_imports = true

# Allow dynamic typing in test files
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ── Tool: pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests/unit",
    "tests/integration",
]
python_files = ["test_*.py"]
addopts = """
    --strict-markers
    --tb=short
    -ra
"""
markers = [
    "unit: unit tests (deselect with '-m \"not unit\"')",
    "integration: integration tests requiring DB/Redis",
    "e2e: end-to-end workflow tests",
    "slow: tests that take longer than normal",
]

# ── Tool: coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["packages"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
